--- a/Docker/9.1.0-0/Dockerfile
+++ b/Docker/9.1.0-0/Dockerfile
@@ -1,7 +1,7 @@
 FROM ubuntu:14.04
 LABEL maintainer="alessandrov87 (https://github.com/AlessandroVaccarino)"
 
-ENV VERTICA_VERSION 9.1.0-0
+ENV VERTICA_VERSION 9.1.0
 
 # Install dev tools
 RUN apt-get update -y \
@@ -39,12 +39,9 @@ COPY software/vertica_9.1.0-0_amd64.deb /srv/setup
 # Pre-installation steps
 # Disable Transparent Hugepages
 RUN echo "kernel/mm/transparent_hugepage/enabled = never" >> /etc/sysfs.conf
-# Create Vertica data folder and HDFS conf folder
+# Create Vertica data and Swap folders
 RUN mkdir -p /srv/vertica/db
-RUN mkdir -p /usr/local/hadoop/etc/hadoop
-#Copy Hadoop config
-COPY conf/core-site.xml /usr/local/hadoop/etc/hadoop
-COPY conf/hdfs-site.xml /usr/local/hadoop/etc/hadoop
+RUN mkdir -p /swap
 
 # Install Vertica
 RUN dpkg -i /srv/setup/vertica_9.1.0-0_amd64.deb
@@ -63,7 +60,6 @@ RUN dpkg -i /srv/setup/vertica-console_9.1.0-0_amd64.deb
 # Remove setup files
 RUN rm /srv/setup/vertica-console_9.1.0-0_amd64.deb
 RUN rm /srv/setup/vertica_9.1.0-0_amd64.deb
-RUN rm /vertica-console_9.1.0-0_amd64.deb
 RUN rm -R /srv/setup
 
 # Copy bootstrap.sh file
